# RustBitCask

./: Cargo.toml  LICENSE  README.md
src/: db.rs  db_file.rs  entry.rs  lib.rs  main.rs  store.rs
src/codec/: entry.rs  file.rs  index.rs  mod.rs
src/config/: cli.rs
src/error/: result.rs
