[package]
name = "kvs"
version = "0.1.0"
authors = ["guozhihao <335247945@qq.com>"]
description = "A key-value store"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.1.4", features = ["derive"]}
failure = {version = "0.1.8", features = ["derive"]}
failure_derive = "0.1.8"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
